# irrigation_system

./: .gitignore  CMakeLists.txt  README.md
include/: data_structure.h  irrigator_task.h  logic_task.h  ros_task.h  sensor_task.h
src/: irrigator_task.c  logic_task.c  main.c  ros_task.c  sensor_task.c
